Code Refactored